--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,8 +21,7 @@ header p {
 }
 
 h1 {
-	font-size: 2.6rem;
-	font-weight: 500;
+	font-size: 3rem;
 }
 
 p {
@@ -48,7 +47,7 @@ button {
 
 input {
 	width: 20rem;
-	margin: 0 3rem;
+	margin: 0 2rem;
 }
 
 button {
@@ -63,7 +62,7 @@ button {
 	border: 1px solid #acacacd8;
 	padding: 0.7rem;
 	border-radius: 1rem;
-	border-left: 1.2rem solid #fd746c;
+	border-right: 1.2rem solid #fd746c;
 }
 
 .todos p {
@@ -73,4 +72,5 @@ button {
 .todos p:hover {
 	text-decoration: line-through;
 	cursor: pointer;
+	opacity: 60%;
 }
